--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="inner-page-after.html">Pro Content</a></li>
-                                <li><a href="#">We are</a></li>
+                                <li><a href="about.html">We are</a></li>
                             </ul>
                         </div>
                         <div class="sideicon">
@@ -92,7 +92,7 @@
                     </ul>
                 </li>
                 <li><a href="inner-page-after.html">Pro Content</a></li>
-                <li><a href="#">We are</a></li>
+                <li><a href="about.html">We are</a></li>
             </ul>
         </div>
     </div>
