--- a/inner-page-after.html
+++ b/inner-page-after.html
@@ -55,7 +55,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="inner-page-after.html">Pro Content</a></li>
-                                <li><a href="#">We are</a></li>
+                                <li><a href="about.html">We are</a></li>
                             </ul>
                         </div>
                         <div class="sideicon">
@@ -268,7 +268,7 @@
                     </ul>
                 </li>
                 <li><a href="inner-page-after.html">Pro Content</a></li>
-                <li><a href="#">We are</a></li>
+                <li><a href="about.html">We are</a></li>
             </ul>
         </div>
     </div>
@@ -279,7 +279,6 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-lg-8">
-                    <video src="https://www.youtube.com/embed/4xe72U7mXNg?rel=0&amp;controls=1"></video>
                     <a href="https://www.youtube.com/embed/4xe72U7mXNg?rel=0&amp;controls=1"
                         class="inner-course bg_img" data-overlay="4" data-background="assets/images/course-1.jpg"
                         data-rel="lightcase:myCollection:">
