--- a/inner-page-before.html
+++ b/inner-page-before.html
@@ -55,7 +55,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="inner-page-after.html">Pro Content</a></li>
-                                <li><a href="#">We are</a></li>
+                                <li><a href="about.html">We are</a></li>
                             </ul>
                         </div>
                         <div class="sideicon">
@@ -275,7 +275,7 @@
                     </ul>
                 </li>
                 <li><a href="inner-page-after.html">Pro Content</a></li>
-                <li><a href="#">We are</a></li>
+                <li><a href="about.html">We are</a></li>
             </ul>
         </div>
     </div>
