--- a/login.html
+++ b/login.html
@@ -47,12 +47,12 @@
                         
                         <div class="content">
                             <h2 class="title"><strong>Login</strong> to
-                                <span>Start Learning</span></h2>
+                                <span> Start Learning</span></h2>
                         </div>
                         </div>
                         
                         <div class="login-form">
-                            <form action="index.html">
+                            <form action="profile.html">
                                 <input type="email" placeholder="Email">
                                 <input type="password" placeholder="Password">
                                 <input type="submit" value="Login">
