--- a/singup.html
+++ b/singup.html
@@ -39,17 +39,16 @@
     <!-- login area start -->
     <section class="login-area register">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-end">
                 <div class="col-lg-4">
                     <div class="login-box register">
                         <div class="login-top">
                             <a href="index.html" class="site-logo"><img src="assets/images/footer-logo.png" alt=""></a>
-                        <div class="content">
-                            <h2 class="title">Join to
-                                <span>Start Learning</span></h2>
+                            <div class="content">
+                                <h2 class="title">Join to
+                                    <span>Start Learning</span></h2>
+                            </div>
                         </div>
-                        </div>
-                        
                         <div class="login-form">
                             <form action="index.html">
                                 <input type="text" placeholder="Full Name">
@@ -81,12 +80,11 @@
                                     </label>
                                 </div>
                                 <input type="submit" value="Sign Up">
-                            </form>
                             <div class="form-bottom">
-                                
                                 <p>You have already joined? <a href="login.html" class="join">Login</a>
                                 </p>
                             </div>
+                            </form>
                         </div>
                     </div>
                 </div>
