--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </ul>
                 </li>
                 <li><a href="inner-page-after.html">Pro Content</a></li>
-                <li><a href="#">We are</a></li>
+                <li><a href="about.html">We are</a></li>
             </ul>
         </div>
     </div>
