--- a/profile-2.html
+++ b/profile-2.html
@@ -54,7 +54,7 @@
                                    </ul>
                                </li>
                                <li><a href="inner-page-after.html">Pro Content</a></li>
-                               <li><a href="#">We are</a></li>
+                               <li><a href="about.html">We are</a></li>
                            </ul>
                        </div>
                        <div class="sideicon">
@@ -90,7 +90,7 @@
                    </ul>
                </li>
                <li><a href="inner-page-after.html">Pro Content</a></li>
-               <li><a href="#">We are</a></li>
+               <li><a href="about.html">We are</a></li>
            </ul>
        </div>
    </div>
